Implement CalculoJuros API.

--- a/CalculoJuros.WebApi/CalculoJuros.WebApi.csproj
+++ b/CalculoJuros.WebApi/CalculoJuros.WebApi.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+	  <InternalsVisibleTo Include="TesteProcessoSeletivo.Tests"/>
   </ItemGroup>
 
 </Project>
