--- a/CalculoJuros.WebApi/appsettings.json
+++ b/CalculoJuros.WebApi/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "TaxaDeJurosPath": "https://localhost:7047/"
 }
