Configure docker compose.

--- a/CalculoJuros.WebApi/CalculoJuros.WebApi.csproj
+++ b/CalculoJuros.WebApi/CalculoJuros.WebApi.csproj
@@ -4,11 +4,15 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
+    <UserSecretsId>f6a814bf-4f19-4b13-b299-44c84e6a8137</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-	  <InternalsVisibleTo Include="TesteProcessoSeletivo.Tests"/>
+	  <InternalsVisibleTo Include="TesteProcessoSeletivo.Tests" />
   </ItemGroup>
 
 </Project>
