--- a/CalculoJuros.WebApi/appsettings.json
+++ b/CalculoJuros.WebApi/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "TaxaDeJurosPath": "https://localhost:7047/"
+  "TaxaDeJurosPath": "http://taxajuros.webapi/"
 }
