Implement showmethecode endpoint.

--- a/CalculoJuros.WebApi/appsettings.json
+++ b/CalculoJuros.WebApi/appsettings.json
@@ -6,5 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "TaxaDeJurosPath": "http://taxajuros.webapi/"
+  "TaxaDeJurosPath": "http://taxajuros.webapi/",
+  "RemoteRepoUri": "https://github.com/gpinheiro1871/TesteProcessoSeletivo"
 }
